--- a/carrito/templates/producto/lista.html.twig
+++ b/carrito/templates/producto/lista.html.twig
@@ -1,6 +1,6 @@
-{%extends 'base.html.twig'%}
+{% extends 'base.html.twig' %}
 
-{%block body%}
+{% block body %}
     <div class="head">
         <strong>Carrito de compras</strong>
         <div style="float: right;">
@@ -8,7 +8,18 @@
             <button class="boton">Salir</button>
 </div>
 </div>
-<main>
 <h2 class="title">Lista de productos</h2>
-</main>
-{%endblock%}
+<div class="productos">
+{% for producto in productos %}
+<div class="producto">
+    <img src="{{ asset (producto.imagen)}} "alt="{{producto.nombre}}" class ="imagen-producto">
+    <h2>{{producto.nombre}}</h2>
+    <p>{{producto.descripcion}}</p>
+    <p class="precio">Precio: ${{producto.precio}} </p>
+    <button class="boton">Ver Detalles</button>
+    </div>
+        {% else %}
+        <p>No hay productos disponibles</p>
+        {% endfor %}
+        </div>
+{% endblock %}
