--- a/carrito/templates/producto/lista.html.twig
+++ b/carrito/templates/producto/lista.html.twig
@@ -1,28 +1,20 @@
-{% block title %}Lista de productos{% endblock %}
 
 {% block body %}
-    <header class="header">
-        <strong>Carrito de Compras</strong>
-        <div style="float: right;">
-            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                <p>Email: {{ app.user.email }}</p>
-            {% endif %}
-            <button class="btn-ligth">Ver Orden</button>
-            <button class="btn-ligth">Salir</button>
-        </div>
-    </header>
-
     {% include 'header.html.twig' %}
-  
     <main>
+        {% for message in app.flashes('notice') %}
+        <div style= "background: #38E841; color: #B35533; padding: 10px; border-radius: 5px; margin-bottom:15px;">
+        {{ message }}
+        </div>
+        {% endfor %}
         <h2 class="title">Lista de productos</h2>
         <div style="display: flex; flex-wrap: wrap; gap: 20px;">
             {% for producto in productos %}
                 <div class="producto">
                     <h3>{{ producto.nombre }}</h3>
+                    <img src="{{asset(producto.imagen) }}" alt ="{{ producto.nombre }} style="max-width: 100%; height: auto;">
                     <p>{{ producto.descripcion }}</p>
                     <p><strong>${{ producto.precio }}</strong></p>
-                    
                     <a href="{{ path('detalle_producto', { id: producto.id }) }}" 
                        style="display:inline-block; padding: 6px 12px; background-color: black; color: white; 
                               text-decoration: none; border-radius: 5px;">
