--- a/carrito/templates/producto/detalle.html.twig
+++ b/carrito/templates/producto/detalle.html.twig
@@ -18,6 +18,19 @@
             <p style="font-size: 18px; font-weight: bold; color: #28a745; margin-bottom: 25px;">
                 ${{ producto.precio }}
             </p>
+            <div style="margin-bottom:30px">
+            <form action="{{ path('agregar_producto') }}" method="post" style="margin-top:20px">
+                <input type="hidden" name="idProducto" value="{{ producto.id }}"/>
+                <label for="cnaridad">Cantidad:</label>
+                <input type="number" id="cantidad" name="cantidad" min="1" value="1"
+                style="padding:5px; border:1px solid #ccc; border-radius:5px">
+
+                <button type="submit"
+                style="padding:8px 12px; background-color:white; border:none; border-radius:5px; margin-left:10px;">
+                Agregar a la orden
+                </button>
+                </form>
+                </div>
 
             <a href="{{ path('listar_productos') }}" 
                style="display: inline-block; padding: 10px 20px; background-color: #111; color: #fff; 
